[tool.poetry]
name = "gemma-gradio-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.17"
gradio = "^4.29.0"
langchain-community = "^0.0.36"
langchain-core = "^0.1.50"
selenium = "^4.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
